# goemotions

./: .env  Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: __init__.py  main.py
app/core/: config.py  logging_config.py
app/routes/: __init__.py  chatbot.py
app/services/: emotion_service.py  translation_service.py
app/utils/: __init__.py  language.py
