[project]
name = "goemotions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cors>=1.0.1",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
